:recycle: Fix input to work in dark mode
... on the splash-screen network selector

--- a/src/components/toolbox/feedback/feedback.css
+++ b/src/components/toolbox/feedback/feedback.css
@@ -6,6 +6,7 @@
 
   align-items: center;
   box-sizing: border-box;
+  border-radius: var(--border-radius-standard);
   color: var(--color-slate-gray);
   display: flex;
   height: auto;
